Fix display of private sheet listings on mobile

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -3293,11 +3293,6 @@ h2.splitHeader .he {
   cursor: pointer;
   text-transform: none
 }
-/*  Add back in when we're ready for tag/edit hover buttons on 'My Sheets'
-.sheet.userSheet:hover .sheetEditButtons {
-	display: inline-block;
-}
-*/
 .sheet.userSheet .sheetEditButtons {
   font-size: 24px;
   height: 32px;
